[tool.poetry]
name = "jinja-docker-compose"
version = "2.0.5"
description = "Enables jinja like preposessing of docker-compose files."
homepage = "https://github.com/okaiff/jinja-compose/blob/master/README.md"
repository = "https://github.com/okaiff/jinja-compose"
authors = ["OKaif"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
j2cli = "^0.3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
script-files = ["src/bin/j-docker-compose"]
