[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jinja-docker-compose"
version = "2.0.6"
description = "Enables jinja like preposessing of docker-compose files."
homepage = "https://github.com/okaiff/jinja-compose/blob/master/README.md"
repository = "https://github.com/okaiff/jinja-compose"
authors = ["OKaif"]
license = "MIT"
readme = "README.md"

[tool.setuptools]
script-files = ["src/bin/j-docker-compose"]

