[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jinja-docker-compose"
version = "2.0.7"
description = "Enables jinja like preposessing of docker-compose files."
license = "MIT"
readme = "README.md"

[tool.setuptools]
script-files = ["src/bin/j-docker-compose"]

